--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prop-types": "15.6.0",
     "react": "16.1.1",
     "react-dom": "16.1.1",
+    "react-redux": "^6.0.0",
     "redux": "^4.0.1"
   }
 }
